--- a/app/views/spaces/index.haml
+++ b/app/views/spaces/index.haml
@@ -1,3 +1,8 @@
 %h2 Spaces
 
-%ul{ id: "spaces" } Luxury Box
+%ul{ id: "spaces" }
+  - @spaces.each do |space|
+    %li
+      = space.name
+      = space.price
+      = space.location
