added tests for location tagging and passed them, minor bug fixes, refactor

--- a/app/views/spaces/index.haml
+++ b/app/views/spaces/index.haml
@@ -5,4 +5,6 @@
     %li
       = space.name
       = space.price
-      = space.location
+      <a href="/locations/space.location.name">space.location.name</a>
+
+CHET NO IDEA WASTED 25HOURS......
