--- a/app/views/users/new.erb
+++ b/app/views/users/new.erb
@@ -1,8 +1,16 @@
 <h1>Please sign up</h1>
+<% if flash[:errors] && !flash[:errors].empty? %>
+  Please refer to the following errors below:
+  <ul id='errors'>
+    <% flash[:errors].each do |error| %>
+      <li><%= error %></li>
+    <% end %>
+  </ul>
+<% end %>
 
 <form action='/users' method='post'>
   <label for='email'>
-    Email: <input name='email' type='text' value=" <%= @user.email %>" required>
+    Email: <input name='email' type='email' value='<%= @user.email %>' required>
   </label>
   <label for='password'>
     Password: <input name='password' type='password'>
