--- a/app/views/users/recover.erb
+++ b/app/views/users/recover.erb
@@ -1,6 +1,5 @@
 <form action='/users/recover' method='post'>
-  <label for='email'>
-    Please enter your email address
+  <label for='email'> Please enter your email address
     <input name='email' type='text' required>
     <input type='submit' value='Submit'>
   </label>
