added creepy image

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Makers BnB</title>
+    <title>Haunted BnB</title>
+    <link rel='stylesheet' href='css/style.css'>
   </head>
 
   <body>
+    <h1>Haunted BnB: Feel terrified, wherever you are.</h1>
     <%= partial :welcome %>
     <%= partial :flash %>
     <%= yield %>
