--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -2,11 +2,13 @@
 <html>
   <head>
     <title>Haunted BnB</title>
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel='stylesheet' href='css/style.css'>
   </head>
 
-  <body>
-    <h1>Haunted BnB: Feel terrified, wherever you are.</h1>
+  <body class="text-center">
+    <h1 class='text-warning'>Haunted BnB</h1>
+    <h3>Feel terrified, wherever you are</h3>
     <%= partial :welcome %>
     <%= partial :flash %>
     <%= yield %>
