--- a/app/public/css/style.css
+++ b/app/public/css/style.css
@@ -1,3 +1,20 @@
 body {
   background-image: url('imgs/creepypasta-brasil.png')
 }
+
+.nav-ul{
+    position: relative;
+    bottom: 35px;
+}
+
+.navbar{
+  margin-bottom:0px !important
+}
+
+#col-nav{
+  padding:0px !important;
+}
+
+#doorstop-nav{
+    margin-right: 20px;
+}
