--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -7,10 +7,38 @@
   </head>
 
   <body class="text-center">
-    <h1 class='text-warning'>Haunted BnB</h1>
-    <h3>Feel terrified, wherever you are</h3>
-    <%= partial :welcome %>
-    <%= partial :flash %>
-    <%= yield %>
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-lg-12" id="col-nav">
+          <nav class="navbar navbar-default navbar-static-top">
+            <div class="container-fluid">
+              <div class="row">
+                <div class="col-lg-12">
+                  <h1 class='text-warning'>Haunted BnB</h1>
+                  <ul class='nav-ul'>
+                    <ul class="navbar-right" id="doorstop-nav"><a href="#">About</a></ul>
+                    <ul class="navbar-right"><a href="#">Login</a></ul>
+                    <ul class="navbar-right"><a href="#">Spaces</a></ul>
+                    <ul class="navbar-right"><a href="#">Requests</a></ul>
+                    <ul class="navbar-right"><a href="#">Sign out</a></ul>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </nav>
+        </div>
+      </div>
+      <div class="row">
+        <div style="position: fixed; z-index: -99; width: 100%; height: 100%">
+          <iframe width="100%" height="100%" src="https://www.youtube.com/embed/BEfu6wDs-zc?rel=0&controls=0&showinfo=0&autoplay=1&loop=1" frameborder="0" allowfullscreen></iframe>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-lg-12">
+          <%= partial :welcome %>
+          <%= partial :flash %>
+          <%= yield %>
+        </div>
+      </div>
   </body>
 </html>
