--- a/app/views/users/new.erb
+++ b/app/views/users/new.erb
@@ -1,22 +1,34 @@
-<h1>Please sign up</h1>
-<% if flash[:errors] && !flash[:errors].empty? %>
-  Please refer to the following errors below:
-  <ul id='errors'>
-    <% flash[:errors].each do |error| %>
-      <li><%= error %></li>
-    <% end %>
-  </ul>
-<% end %>
+<div class="container-fluid">
 
-<form action='/users' method='post'>
-  <label for='email'>
-    Email: <input name='email' type='email' value='<%= @user.email %>' required>
-  </label>
-  <label for='password'>
-    Password: <input name='password' type='password'>
-  </label>
-  <label for='password_confirmation'>
-    Password: <input name='password_confirmation' type='password'>
-  </label>
-  <input type='submit' value='Sign up'>
-</form>
+  <div class="row">
+    <div class="col-lg-12"
+      <h1>Please sign up</h1>
+      <% if flash[:errors] && !flash[:errors].empty? %>
+        Please refer to the following errors below:
+        <ul id='errors'>
+          <% flash[:errors].each do |error| %>
+            <li><%= error %></li>
+          <% end %>
+        </ul>
+      <% end %>
+    </div>
+  </div>
+
+
+  <div class="row">
+    <div class="col-lg-12">
+      <form action='/users' method='post'>
+        <label for='email'>
+          Email: <input name='email' type='email' value='<%= @user.email %>' required>
+        </label>
+        <label for='password'>
+          Password: <input name='password' type='password'>
+        </label>
+        <label for='password_confirmation'>
+          Password: <input name='password_confirmation' type='password'>
+        </label>
+        <input type='submit' value='Sign up'>
+      </form>
+      </div>
+  </div>
+</div>
