--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -4,35 +4,30 @@
     <title>Haunted BnB</title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel='stylesheet' href='css/style.css'>
+    <script src='http://use.edgefonts.net/butcherman.js'></script>
   </head>
 
   <body class="text-center">
     <div class="container-fluid">
       <div class="row">
-        <div class="col-lg-12" id="col-nav">
-          <nav class="navbar navbar-default navbar-static-top">
+          <nav class="navbar navbar-default navbar-fixed-top">
             <div class="container-fluid">
-              <div class="row">
-                <div class="col-lg-12">
-                  <h1 class='text-warning'>Haunted BnB</h1>
-                  <ul class='nav-ul'>
-                    <ul class="navbar-right" id="doorstop-nav"><a href="#">About</a></ul>
-                    <ul class="navbar-right"><a href="#">Login</a></ul>
-                    <ul class="navbar-right"><a href="#">Spaces</a></ul>
-                    <ul class="navbar-right"><a href="#">Requests</a></ul>
-                    <ul class="navbar-right"><a href="#">Sign out</a></ul>
-                  </ul>
-                </div>
-              </div>
+              <div class="navbar-header"><a href="/"><h1 class="text-danger" style="font-family:butcherman">Haunted BnB</h1></a></div>
+              <ul class="nav navbar-nav" style="float: right; margin: 10px;">
+                <li><a href="#">About</a></li>
+                <li><a href="#">Requests</a></li>
+                <li><a href="#">Spaces</a></li>
+                <li><a href="#">Sign Out</a></li>
+                <li><a href="#">Login</a></li>
+              </ul>
             </div>
           </nav>
         </div>
-      </div>
       <div class="row">
           <%= partial :welcome %>
           <%= partial :flash %>
           <%= yield %>
-        </div>
       </div>
+    </div>
   </body>
 </html>
