working on section styling

--- a/app/public/css/style.css
+++ b/app/public/css/style.css
@@ -26,6 +26,9 @@ form {
 
 section {
   border-radius: 30px;
-  background-color: wheat;
-  opacity: 0.9;
+  opacity: 0.98;
+  background-color: #333;
+  margin: 0px 100px 0px 100px;
+  position:relative;
+  top:150px;
 }
