--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -4,7 +4,7 @@
     <title>Haunted BnB</title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel='stylesheet' href='css/style.css'>
-    <script src='http://use.edgefonts.net/butcherman.js'></script>
+    <link href='https://fonts.googleapis.com/css?family=Cormorant+Garamond:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
   </head>
 
 
@@ -13,7 +13,7 @@
       <div class="row">
           <nav class="navbar navbar-default navbar-fixed-top">
             <div class="container-fluid">
-              <div class="navbar-header"><a href="/"><h1 class="text-danger" style="font-family:butcherman">Haunted BnB</h1></a></div>
+              <div class="navbar-header"><a href="/"><h1 class="text-danger" style="font-family:Cormorant Garamond;">Haunted BnB</h1></a></div>
               <ul class="nav navbar-nav" style="float: right; margin: 10px;">
                 <li><a href="#">About</a></li>
                 <li><a href="#">Requests</a></li>
