--- a/app/views/users/new.erb
+++ b/app/views/users/new.erb
@@ -1,7 +1,6 @@
 <div class="container-fluid">
-
   <div class="row">
-    <div class="col-lg-12"
+    <div class="col-lg-12">
       <h1>Please sign up</h1>
       <% if flash[:errors] && !flash[:errors].empty? %>
         Please refer to the following errors below:
@@ -13,8 +12,6 @@
       <% end %>
     </div>
   </div>
-
-
   <div class="row">
     <div class="col-lg-12">
       <form action='/users' method='post'>
@@ -29,6 +26,6 @@
         </label>
         <input type='submit' value='Sign up'>
       </form>
-      </div>
+    </div>
   </div>
 </div>
