--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -3,7 +3,7 @@
   <head>
     <title>Haunted BnB</title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <link rel='stylesheet' href='css/style.css'>
+    <link rel='stylesheet' href='/css/style.css'>
     <link href='https://fonts.googleapis.com/css?family=Cormorant+Garamond:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
   </head>
 
