--- a/app/views/users/new.erb
+++ b/app/views/users/new.erb
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div class="container-fluid" style="background-image:url('http://cdn.playbuzz.com/cdn/ca39901a-b069-4455-8e48-6dec38d2deae/d97e9092-f95f-4b45-a66d-c8429e294e76.jpg'); background-repeat:no-repeat;background-size: 100% 100%;">
   <div class="row">
     <div class="col-lg-12">
       <h1>Please sign up</h1>
@@ -13,25 +13,31 @@
     </div>
   </div>
   <div class="row">
-    <div class="col-lg-12"><h2>Please sign up and enjoy the view of this pumpkin</h2></div>
-  </div>
-  <div class="row">
     <div class="col-lg-4">
-      <form action='/users' method='post'>
-        <label for='email'>
-          Email: <input name='email' type='email' value='<%= @user.email %>' required>
-        </label>
-        <label for='password'>
-          Password: <input name='password' type='password'>
-        </label>
-        <label for='password_confirmation'>
-          Password Confirmation: <input name='password_confirmation' type='password'>
-        </label>
-        <input type='submit' value='Sign up'>
-      </form>
+      <section>
+        <form action='/users' method='post'>
+          <h2>Please sign up</h2>
+          <div class="form-group">
+            <label for='email'>
+              Email: <input class='form-control' name='email' type='email' value='<%= @user.email %>' required>
+            </label>
+          </div>
+          <div class="form-group">
+            <label for='password'>
+              Password: <input class='form-control' name='password' type='password'>
+            </label>
+          </div>
+          <div class="form-group">
+            <label for='password_confirmation'>
+              Password Confirmation: <input class='form-control' name='password_confirmation' type='password'>
+            </label>
+          </div>
+          <input class="btn btn-danger" type='submit' value='Sign up'>
+        </form>
+      </section>
     </div>
     <div class="col-lg-8">
-      <img class="img-responsive" src="http://www.victorystore.com/media/catalog/product/cache/1/image/700x700/9df78eab33525d08d6e5fb8d27136e95/s/c/scary-jack-o-lantern-44in-a.jpg">
-    </div
+      &nbsp;
+    </div>
   </div>
 </div>
