fixed some body code that went missing

--- a/app/views/users/new.erb
+++ b/app/views/users/new.erb
@@ -36,7 +36,7 @@
         </form>
       </section>
     </div>
-    <div class="col-lg-8">
+    <div class="col-lg-8" style="height:auto;width:auto;">
       &nbsp;
     </div>
   </div>
