--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -14,10 +14,8 @@
               <div class="navbar-header"><a href="/"><h1 class="text-danger" style="font-family:Cormorant Garamond;">Haunted BnB</h1></a></div>
               <ul class="nav navbar-nav" style="float: right; margin: 10px;">
                 <li><a href="/about">About</a></li>
-                <li><a href="#">Requests</a></li>
-                <li><a href="#">Spaces</a></li>
-                <li><a href="#">Sign Out</a></li>
-                <li><a href="#">Login</a></li>
+                <li><a href="/request">Requests</a></li>
+                <li><a href="/spaces">Spaces</a></li>
               </ul>
             </div>
           </nav>
