--- a/app/public/css/style.css
+++ b/app/public/css/style.css
@@ -29,6 +29,23 @@ section {
 }
 
 form {
-    margin-top: 25%;
     padding: 10px;
+}
+
+#bg {
+  position: fixed;
+  top: -50%;
+  left: -50%;
+  width: 200%;
+  height: 200%;
+}
+#bg img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin: auto;
+  min-width: 50%;
+  min-height: 50%;
 }
