--- a/app/views/users/new.erb
+++ b/app/views/users/new.erb
@@ -1,6 +1,9 @@
-<div class="container-fluid" style="background-image:url('http://cdn.playbuzz.com/cdn/ca39901a-b069-4455-8e48-6dec38d2deae/d97e9092-f95f-4b45-a66d-c8429e294e76.jpg'); background-repeat:no-repeat;background-size: 100% 100%;">
+<div class="container-fluid">
   <div class="row">
     <div class="col-lg-12">
+      <div id="bg">
+       <img src="http://cdn.playbuzz.com/cdn/ca39901a-b069-4455-8e48-6dec38d2deae/d97e9092-f95f-4b45-a66d-c8429e294e76.jpg" alt="">
+     </div>
       <h1>Please sign up</h1>
       <% if flash[:errors] && !flash[:errors].empty? %>
         Please refer to the following errors below:
