--- a/app/public/css/style.css
+++ b/app/public/css/style.css
@@ -1,6 +1,7 @@
-body{
-  margin-top:70px;
+body {
+    margin-top: 70px;
 }
+
 section {
     color: white;
     border-radius: 30px;
@@ -33,19 +34,29 @@ form {
 }
 
 #bg {
-  position: fixed;
-  top: -50%;
-  left: -50%;
-  width: 200%;
-  height: 200%;
+    position: fixed;
+    top: -50%;
+    left: -50%;
+    width: 200%;
+    height: 200%;
 }
+
 #bg img {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  margin: auto;
-  min-width: 50%;
-  min-height: 50%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    margin: auto;
+    min-width: 50%;
+    min-height: 50%;
+}
+
+.transparent {
+    background-color: rgba(0, 0, 0, 0.15);
+}
+
+.panel {
+    background-color: transparent;
+    border: 1px #222;
 }
