--- a/app/views/users/recover.erb
+++ b/app/views/users/recover.erb
@@ -1,6 +1,36 @@
-<form action='/users/recover' method='post'>
-  <label for='email'> Please enter your email address
-    <input name='email' type='text' required>
-    <input type='submit' value='Submit'>
-  </label>
-</form>
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-lg-12">
+      <div id="bg">
+       <img src="http://wallpapercave.com/wp/1bKqrrz.jpg" alt="">
+     </div>
+      <h1>Please enter your email address</h1>
+      <% if flash[:errors] && !flash[:errors].empty? %>
+        Please refer to the following errors below:
+        <ul id='errors'>
+          <% flash[:errors].each do |error| %>
+            <li><%= error %></li>
+          <% end %>
+        </ul>
+      <% end %>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-lg-4">
+      <section>
+        <form action='/users/recover' method='post'>
+          <h2>Please enter your email address</h2>
+          <div class="form-group">
+            <label for='email'> 
+              Email: <input class='form-control' name='email' type='email' required>
+            </label>
+          </div>
+          <input class="btn btn-danger" type='submit' value='Submit'>
+        </form>
+      </section>
+    </div>
+    <div class="col-lg-8" style="height:auto;width:auto;">
+      &nbsp;
+    </div>
+  </div>
+</div>
