--- a/app/views/about/about.erb
+++ b/app/views/about/about.erb
@@ -3,19 +3,23 @@
 	<div class="container-fluid">
 		<div class="row">
 			<div class="col-lg-12">
-				<h1>About Us</h1>
-				<p>
-					Founded in November of 2016 and based in the zombie infested town of Sheffield, UK, Haunted BnB is a scary community marketplace for the last people on Earth to list, discover, and book haunted accommodations around the world —primarily online , but we will get to a functioning app on mobile phone or tablet soon!
-				</p>
-				<p>
-					Whether a murder scene for a night, a for derelict apartment a week, or a haunted castle for a month, Haunted BnB connects remaining survivors to spooky travel experiences, at any price point, in more than 34,000 cities and 191 countries. And with the World's worst customer service, but an ever growing community of vampires, warewolves and zombies, Haunted BnB is the easiest way for disturbed people to monetize their unholy space and showcase it to an audience of millions.
-				</p>
+			<div class="panel">
+				<div class="panel-body">
+					<h1>About Us</h1>
+					<p>
+						Founded in November of 2016 and based in the zombie infested town of Sheffield, UK, Haunted BnB is a scary community marketplace for the last people on Earth to list, discover, and book haunted accommodations around the world —primarily online , but we will get to a functioning app on mobile phone or tablet soon!
+					</p>
+					<p>
+						Whether a murder scene for a night, a for derelict apartment a week, or a haunted castle for a month, Haunted BnB connects remaining survivors to spooky travel experiences, at any price point, in more than 34,000 cities and 191 countries. And with the World's worst customer service, but an ever growing community of vampires, warewolves and zombies, Haunted BnB is the easiest way for disturbed people to monetize their unholy space and showcase it to an audience of millions.
+					</p>
+				</div>
+			</div>
 				<h1>Our Co-Founders</h1>
 				<div class="panel">
 					<div class="panel-body">
 						<div class="media space-4">
-							<figure class="pull-left"> 
-								<img src="https://avatars2.githubusercontent.com/u/7127262?v=3&s=400" width="200" height="200" alt="Chet Sanghani">
+							<figure class="pull-left">
+								<img class="figure-image" src="https://avatars2.githubusercontent.com/u/7127262?v=3&s=400" width="200" height="200" alt="Chet Sanghani">
 							</figure>
 							<h2>
 								Chet Sanghani <br>
@@ -24,8 +28,8 @@
 							<p>Lorem ipsum dolor sit amet, qui feugait persecuti referrentur ad, te ius unum aeterno, fastidii laboramus ei pri. Sonet deseruisse intellegebat id eum. Est sint unum ei, ne mea idque facilis scriptorem. At quo primis splendide philosophia, pri mazim placerat ex. Has ex ludus convenire molestiae. Ei eripuit periculis prodesset est.</p>
 						</div>
 						<div class="media space-4">
-							<figure class="pull-left"> 
-								<img src="https://avatars1.githubusercontent.com/u/18068044?v=3&s=466" width="200" height="200" alt="Chris Sanchez">
+							<figure class="pull-left">
+								<img class="figure-image" src="https://avatars1.githubusercontent.com/u/18068044?v=3&s=466" width="200" height="200" alt="Chris Sanchez">
 							</figure>
 							<h2>
 								Chris Sanchez <br>
@@ -34,8 +38,8 @@
 							<p>Lorem ipsum dolor sit amet, qui feugait persecuti referrentur ad, te ius unum aeterno, fastidii laboramus ei pri. Sonet deseruisse intellegebat id eum. Est sint unum ei, ne mea idque facilis scriptorem. At quo primis splendide philosophia, pri mazim placerat ex. Has ex ludus convenire molestiae. Ei eripuit periculis prodesset est.</p>
 						</div>
 						<div class="media space-4">
-							<figure class="pull-left"> 
-								<img src="https://avatars3.githubusercontent.com/u/15964753?v=3&s=400" width="200" height="200" alt="Lawrence Hunt">
+							<figure class="pull-left">
+								<img class="figure-image" src="https://avatars3.githubusercontent.com/u/15964753?v=3&s=400" width="200" height="200" alt="Lawrence Hunt">
 							</figure>
 							<h2>
 								Lawrence Hunt<br>
@@ -44,8 +48,8 @@
 							<p>Lorem ipsum dolor sit amet, qui feugait persecuti referrentur ad, te ius unum aeterno, fastidii laboramus ei pri. Sonet deseruisse intellegebat id eum. Est sint unum ei, ne mea idque facilis scriptorem. At quo primis splendide philosophia, pri mazim placerat ex. Has ex ludus convenire molestiae. Ei eripuit periculis prodesset est.</p>
 						</div>
 						<div class="media space-4">
-							<figure class="pull-left"> 
-								<img src="https://avatars0.githubusercontent.com/u/20990508?v=3&s=400" width="200" height="200" alt="Stevie Gore-Winston">
+							<figure class="pull-left">
+								<img class="figure-image" src="https://avatars0.githubusercontent.com/u/20990508?v=3&s=400" width="200" height="200" alt="Stevie Gore-Winston">
 							</figure>
 							<h2>
 								Stevie Gore-Winston <br>
