--- a/app/views/spaces/new.erb
+++ b/app/views/spaces/new.erb
@@ -1,11 +1,52 @@
-<h2> Tell us about your space. </h2>
-
-<form action='/spaces' method='post'>
-  <input name='name' type='text' placeholder="name your spooky space">
-  <input name='location' type='text' placeholder="set your location">
-  <input name='price' type='number' placeholder="set your price">
-  <input name='description' type='textarea' rows='4' cols='50' placeholder="tell us about your space">
-  <input name="available_from" type="date">
-  <input name="available_to" type="date">
-  <input type='submit' value='List your space'>
-</form>
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-lg-12">
+      <div id="bg">
+       <img src="http://www.d40oom.eu/Wordpress/wp-content/uploads/2014/08/Bearbeitet-22.jpg" alt="">
+     </div>
+      <h1>List your scary as fudge space</h1>
+      <% if flash[:errors] && !flash[:errors].empty? %>
+        Please refer to the following errors below:
+        <ul id='errors'>
+          <% flash[:errors].each do |error| %>
+            <li><%= error %></li>
+          <% end %>
+        </ul>
+      <% end %>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-lg-12">
+      <section>
+        <form class="form-inline" action='/spaces' method='post'>
+          <h1>Tell us about your scary as fudge space</h1>
+          <div class="form-group">
+            <label for="place">The Spooky Place</label>
+            <input name='name' type='text' placeholder="what do you call it?">
+          </div>
+          <div class="form-group">
+            <label for="location">Location</label>
+            <input name='location' type='text' placeholder="and where is it?">
+          </div>
+          <div class="form-group">
+            <label for="price">Price</label>
+            <input name='price' type='number' placeholder="and for how much?">
+          </div>
+          <div class="form-group">
+            <label for="description">Description</label>
+            <input name='description' type='textarea' rows='4' cols='50' placeholder="what makes it spooky?"> 
+          </div><br>
+          <div class="form-group">
+            <label for="available_from">Available From</label>
+            <input name="available_from" type="date">
+          </div>
+          <div class="form-group">
+            <label for="available_to">Available To</label>
+            <input name="available_to" type="date">
+          </div>
+          <input class="btn btn-danger" type='submit' value='List your space if you dare!'>
+        </form>
+      </section>
+    </div>
+  </div>
+</div>
