--- a/app/views/spaces/new.erb
+++ b/app/views/spaces/new.erb
@@ -22,27 +22,27 @@
           <h1>Tell us about your scary as fudge space</h1>
           <div class="form-group">
             <label for="place">The Spooky Place</label>
-            <input name='name' type='text' placeholder="what do you call it?">
+            <input class='form-control' name='name' type='text' placeholder="what do you call it?">
           </div>
           <div class="form-group">
             <label for="location">Location</label>
-            <input name='location' type='text' placeholder="and where is it?">
+            <input class='form-control' name='location' type='text' placeholder="and where is it?">
           </div>
           <div class="form-group">
             <label for="price">Price</label>
-            <input name='price' type='number' placeholder="and for how much?">
+            <input class='form-control' name='price' type='number' placeholder="and for how much?">
           </div>
           <div class="form-group">
             <label for="description">Description</label>
-            <input name='description' type='textarea' rows='4' cols='50' placeholder="what makes it spooky?"> 
+            <input class='form-control' name='description' type='textarea' rows='4' cols='50' placeholder="what makes it spooky?"> 
           </div><br>
           <div class="form-group">
             <label for="available_from">Available From</label>
-            <input name="available_from" type="date">
+            <input class='form-control' name="available_from" type="date">
           </div>
           <div class="form-group">
             <label for="available_to">Available To</label>
-            <input name="available_to" type="date">
+            <input class='form-control' name="available_to" type="date">
           </div>
           <input class="btn btn-danger" type='submit' value='List your space if you dare!'>
         </form>
